--- a/index.html
+++ b/index.html
@@ -3,81 +3,154 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Osakar Agro Tech</title>
-  <meta name="description" content="Osakar Agro Tech provides high-performance rotavator blades for precision and durability in agriculture.">
-  <meta name="keywords" content="agricultural blades, rotavator blades, farming tools, soil preparation, Osakar Agro Tech">
+  <title>Osakar Agro Tech - High-Performance Rotavator Blades</title>
+  <meta name="description" content="Osakar Agro Tech provides high-performance rotavator blades for precision and durability in agriculture. Explore our range of L-Type, Super Series, J-Type blades, and Dryland Tynes.">
+  <meta name="keywords" content="agricultural blades, rotavator blades, farming tools, soil preparation, Osakar Agro Tech, L-Type blades, Super Series blades, J-Type blades, Dryland Tynes">
+  <meta name="author" content="Osakar Agro Tech">
   <link rel="canonical" href="https://www.yourwebsite.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
+  
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Osakar Agro Tech - High-Performance Rotavator Blades">
+  <meta property="og:description" content="Osakar Agro Tech provides high-performance rotavator blades for precision and durability in agriculture.">
+  <meta property="og:image" content="https://www.yourwebsite.com/logo.png">
+  <meta property="og:url" content="https://www.yourwebsite.com">
+  <meta property="og:type" content="website">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Osakar Agro Tech - High-Performance Rotavator Blades">
+  <meta name="twitter:description" content="Osakar Agro Tech provides high-performance rotavator blades for precision and durability in agriculture.">
+  <meta name="twitter:image" content="https://www.yourwebsite.com/logo.png">
+  
+  <!-- Fonts and Styles -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <div class="container">
-      <a href="#" aria-label="Home">
-        <img src="logo.png" alt="Osakar Agro Tech Logo" class="logo">
-      </a>
-      <nav>
-        <ul>
-          <li><a href="#about" aria-label="About Us">About Us</a></li>
-          <li><a href="#vision-mission" aria-label="Vision & Mission">Vision & Mission</a></li>
-          <li><a href="#products" aria-label="Our Products">Our Products</a></li>
-          <li><a href="#why-choose-us" aria-label="Why Choose Us">Why Choose Us</a></li>
-          <li><a href="#contact" aria-label="Contact Us">Contact Us</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
+    <header>
+        <div class="container">
+          <a href="#" aria-label="Home">
+            <!-- Updated logo dimensions (535x75) -->
+            <img src="Assets/logo.png" alt="Osakar Agro Tech Logo" class="logo">
+          </a>
+          <nav>
+            <ul>
+              <li><a href="#about" aria-label="About Us">About Us</a></li>
+              <li><a href="#vision-mission" aria-label="Vision & Mission">Vision & Mission</a></li>
+              <li><a href="#products" aria-label="Our Products">Our Products</a></li>
+              <li><a href="#why-choose-us" aria-label="Why Choose Us">Why Choose Us</a></li>
+              <!-- New Brochure Button -->
+              <li><a href="brochure.pdf" class="brochure-btn" download aria-label="Download Brochure">Brochure</a></li>
+              <li><a href="#contact" aria-label="Contact Us">Contact Us</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
   <section id="hero" class="section">
     <div class="container">
-      <h2>Precision in Every Cut</h2>
+      <h1>Precision in Every Cut</h1>
       <p>Redefining durability, precision, and efficiency in agricultural blades.</p>
       <a href="#products" class="btn" aria-label="Explore Our Products">Explore Our Products</a>
     </div>
   </section>
 
-  <section id="about" class="section">
-    <div class="container">
-      <h2>About Us</h2>
-      <p>At Osakar Agro Tech, we take pride in crafting high-performance rotavator blades that redefine durability, precision, and efficiency. Designed to meet the toughest agricultural challenges, our blades ensure superior soil preparation, enabling farmers to achieve higher productivity with every pass.</p>
-    </div>
-  </section>
+    
+  <!-- Updated Vision & Mission Section -->
+ <section id="vision-mission" class="section">
+        <div class="container">
+          <div class="vision-mission-grid">
+            <div class="vision-container">
+              <div class="vision">
+                <h3>Vision</h3>
+                <p>To be the global leader in manufacturing high-performance agricultural blades that set the standard for durability, precision, and reliability, enabling farmers to cultivate success with every cut.</p>
+              </div>
+            </div>
+            <div class="mission-container">
+              <div class="mission">
+                <h3>Mission</h3>
+                <p>To craft superior quality blades that meet the toughest agricultural challenges, ensuring optimal performance, longer wear life, and cost-effectiveness for farmers and equipment manufacturers worldwide</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-  <section id="vision-mission" class="section">
-    <div class="container">
-      <h2>Vision & Mission</h2>
-      <div class="vision-mission-grid">
-        <div class="vision">
-          <h3>Vision</h3>
-          <p>To be the global leader in manufacturing high-performance agricultural blades that set the standard for durability, precision, and reliability, enabling farmers to cultivate success with every cut.</p>
-        </div>
-        <div class="mission">
-          <h3>Mission</h3>
-          <p>To craft superior quality blades that meet the toughest agricultural challenges, ensuring optimal performance, longer wear life, and cost-effectiveness for farmers and equipment manufacturers worldwide.</p>
-        </div>
-      </div>
+    <div class="image-modal">
+      <span class="close-modal">&times;</span>
+      <img class="modal-content" id="expanded-img">
     </div>
-  </section>
+      
 
   <section id="products" class="section">
     <div class="container">
       <h2>Our Range of High-Performance Blades</h2>
-      <div class="product-grid">
-        <div class="product">
-          <h3>L-Type Blades</h3>
-          <p>Crafted from high-quality 30MnCrB5 material, L-Type blades are engineered for precision and durability. Designed for deep cuts, these blades ensure only the cutting edge interacts with the soil, minimizing ground compaction while maintaining a self-sharpening profile. Ideal for shallow cultivations of 2 inches or less, they are also perfect for leveling the tillage zone, delivering exceptional performance across various soil conditions.</p>
+      <div class="product-carousel">
+        <!-- Product 1: L-Type Blades -->
+        <div class="product-item">
+          <div class="product-content">
+            <h3>L-Type Blades</h3>
+            <p>Crafted from high-quality 30MnCrB5 material, L-Type blades are engineered for precision and durability. Designed for deep cuts, these blades ensure only the cutting edge interacts with the soil, minimizing ground compaction while maintaining a self-sharpening profile. Ideal for shallow cultivations of 2 inches or less, they are also perfect for leveling the tillage zone, delivering exceptional performance across various soil conditions.</p>
+          </div>
+          <div class="product-image-carousel">
+            <div class="carousel-inner">
+              <img src="https://via.placeholder.com/248x227" alt="L-Type Blades Image 1"><!-- 800 width x 600 height -->
+              <img src="https://via.placeholder.com/248x227" alt="L-Type Blades Image 2">
+              <img src="https://via.placeholder.com/248x227" alt="L-Type Blades Image 3">
+            </div>
+            <button class="carousel-prev" aria-label="Previous Image">&#10094;</button>
+            <button class="carousel-next" aria-label="Next Image">&#10095;</button>
+          </div>
         </div>
-        <div class="product">
-          <h3>Super Series Blades</h3>
-          <p>Engineered for toughness and exceptional performance, Super Series blades are designed to penetrate hard or clay-rich soils with ease. Constructed from a specially engineered alloy, the blades feature a thermally sprayed coating applied in a molten state to achieve superior wear resistance against abrasive forces. Additionally, these blades are precision-crafted with a hydraulically induced curve, creating a hybrid profile between L-Type and C-Type designs. This unique geometry enhances soil engagement efficiency, reduces wear rates, and ensures optimal durability for demanding applications.</p>
+
+        <!-- Product 2: Super Series Blades -->
+        <div class="product-item">
+          <div class="product-content">
+            <h3>Super Series Blades</h3>
+            <p>Engineered for toughness and exceptional performance, Super Series blades are designed to penetrate hard or clay-rich soils with ease. Constructed from a specially engineered alloy, the blades feature a thermally sprayed coating applied in a molten state to achieve superior wear resistance against abrasive forces. Additionally, these blades are precision-crafted with a hydraulically induced curve, creating a hybrid profile between L-Type and C-Type designs. This unique geometry enhances soil engagement efficiency, reduces wear rates, and ensures optimal durability for demanding applications.</p>
+          </div>
+          <div class="product-image-carousel">
+            <div class="carousel-inner">
+              <img src="blade x.png" alt="Super Series Blades Image 1">
+              <img src="blade x.png" alt="Super Series Blades Image 2">
+              <img src="blade y.png" alt="Super Series Blades Image 3">
+            </div>
+            <button class="carousel-prev" aria-label="Previous Image">&#10094;</button>
+            <button class="carousel-next" aria-label="Next Image">&#10095;</button>
+          </div>
         </div>
-        <div class="product">
-          <h3>J-Type Blades</h3>
-          <p>Engineered for toughness and exceptional performance, J-Type blades are designed to penetrate hard or clay-rich soils with ease. Constructed from a specially engineered alloy, the blades feature a thermally sprayed coating applied in a molten state to achieve superior wear resistance against abrasive forces. Additionally, these blades are precision-crafted with a hydraulically induced curve, creating a hybrid profile between L-Type and C-Type designs. This unique geometry enhances soil engagement efficiency, reduces wear rates, and ensures optimal durability for demanding applications.</p>
-        </div>
-        <div class="product">
-            <h3>Dryland Tynes</h3>
+
+        <!-- Product 3: J-Type Blades -->
+        <div class="product-item">
+          <div class="product-content">
+            <h3>J-Type Blades</h3>
             <p>Engineered for toughness and exceptional performance, J-Type blades are designed to penetrate hard or clay-rich soils with ease. Constructed from a specially engineered alloy, the blades feature a thermally sprayed coating applied in a molten state to achieve superior wear resistance against abrasive forces. Additionally, these blades are precision-crafted with a hydraulically induced curve, creating a hybrid profile between L-Type and C-Type designs. This unique geometry enhances soil engagement efficiency, reduces wear rates, and ensures optimal durability for demanding applications.</p>
+          </div>
+          <div class="product-image-carousel">
+            <div class="carousel-inner">
+              <img src="https://via.placeholder.com/269x358" alt="J-Type Blades Image 1">
+              <img src="https://via.placeholder.com/269x358" alt="J-Type Blades Image 2">
+              <img src="https://via.placeholder.com/269x358" alt="J-Type Blades Image 3">
+            </div>
+            <button class="carousel-prev" aria-label="Previous Image">&#10094;</button>
+            <button class="carousel-next" aria-label="Next Image">&#10095;</button>
+          </div>
+        </div>
+
+        <!-- Product 4: Dryland Tynes -->
+        <div class="product-item">
+          <div class="product-content">
+            <h3>Dryland Tynes</h3>
+            <p>Engineered for toughness and exceptional performance, Dryland Tynes are designed to penetrate hard or clay-rich soils with ease. Constructed from a specially engineered alloy, the blades feature a thermally sprayed coating applied in a molten state to achieve superior wear resistance against abrasive forces. Additionally, these blades are precision-crafted with a hydraulically induced curve, creating a hybrid profile between L-Type and C-Type designs. This unique geometry enhances soil engagement efficiency, reduces wear rates, and ensures optimal durability for demanding applications.</p>
+          </div>
+          <div class="product-image-carousel">
+            <div class="carousel-inner">
+              <img src="https://via.placeholder.com/260x317" alt="Dryland Tynes Image 1">
+              <img src="https://via.placeholder.com/260x317" alt="Dryland Tynes Image 2">
+              <img src="https://via.placeholder.com/260x317" alt="Dryland Tynes Image 3">
+            </div>
+            <button class="carousel-prev" aria-label="Previous Image">&#10094;</button>
+            <button class="carousel-next" aria-label="Next Image">&#10095;</button>
+          </div>
         </div>
       </div>
     </div>
@@ -87,31 +160,27 @@
     <div class="container">
       <h2>Why Choose Osakar Blades?</h2>
       <div class="features-grid">
-        <div class="feature">
+        <div class="feature feature-1">
           <h3>Optimized Wear Resistance</h3>
           <p>Osakar blades are engineered to deliver superior durability with significantly reduced wear rates compared to conventional alternatives, ensuring longer service life and fewer replacements.</p>
         </div>
-        <div class="feature">
+        <div class="feature feature-2">
           <h3>Stringent Quality Assurance</h3>
           <p>Over 30 critical quality checks during manufacturing, including material analysis, hardness testing, and dimensional accuracy. 10 additional post-production inspections to ensure defect-free products.</p>
         </div>
-        <div class="feature">
+        <div class="feature feature-3">
           <h3>Enhanced Mechanical Properties</h3>
           <p>Constructed from high-grade alloys for superior tensile strength, impact resistance, and elasticity. Finite Element Analysis (FEA) and fatigue testing ensure optimal performance under dynamic stress.</p>
         </div>
-        <div class="feature">
+        <div class="feature feature-4">
           <h3>Precision Manufacturing</h3>
           <p>Advanced machinery and monitored heat treatments guarantee consistent quality and tight tolerances. Balanced designs for smoother operation and reduced machine strain.</p>
         </div>
-        <div class="feature">
+        <div class="feature feature-5">
           <h3>Superior Field Performance</h3>
           <p>Optimized for cutting and soil penetration, enhancing operational efficiency. Reduces power consumption and minimizes downtime.</p>
         </div>
-        <div class="feature">
-          <h3>Unmatched Customer Service</h3>
-          <p>24/7 technical support for prompt issue resolution. Expert guidance for blade selection and maintenance tailored to your needs. Comprehensive warranty for peace of mind.</p>
-        </div>
-        <div class="feature">
+        <div class="feature feature-6">
           <h3>Sustainability Commitment</h3>
           <p>Durable blades reduce environmental impact through fewer replacements. Eco-friendly manufacturing processes promote a greener planet.</p>
         </div>
@@ -172,7 +241,9 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2023 Osakar Agro Tech. All rights reserved.</p>
+      <h4>MANGLAI, KHUDDA KALAN, AMABALA 133104 | GSTIN:06AAJFO0485C1ZG | CONTACT@OSAKAR.IN </h4>
+
+      <p>&copy; 2024 Osakar Agro Tech. All rights reserved.</p>
     </div>
   </footer>
 
